--- a/app/src/main/res/layout/activity_recommendation.xml
+++ b/app/src/main/res/layout/activity_recommendation.xml
@@ -24,14 +24,44 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:titleEnabled="false">
 
-            <ImageView
-                android:id="@+id/img"
+            <!--<ImageView-->
+                <!--android:id="@+id/img"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:fitsSystemWindows="true"-->
+                <!--android:scaleType="centerCrop"-->
+                <!--android:src="@drawable/ic_launcher_background"-->
+                <!--app:layout_collapseMode="parallax" >-->
+            <!--</ImageView>-->
+
+            <RelativeLayout
+                android:id="@+id/r2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_launcher_background"
-                app:layout_collapseMode="parallax" />
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/img"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax"
+                    android:src="@drawable/ic_launcher_background" />
+
+                <TextView
+                    android:id="@+id/myImageViewText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/img"
+                    android:layout_alignLeft="@+id/img"
+                    android:layout_alignRight="@+id/img"
+                    android:layout_alignTop="@+id/img"
+                    android:layout_margin="1dp"
+                    android:gravity="center"
+                    android:text="Hello"
+                    android:textColor="@color/wallet_hint_foreground_holo_dark"
+                    android:textSize="24sp" />
+            </RelativeLayout>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/anim_toolbar"
