--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -4,6 +4,7 @@
     android:layout_width="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
+
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/map"
@@ -12,32 +13,26 @@
         android:layout_height="match_parent"
         tools:context="com.example.shakt.baked.MapActivity" />
 
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/recyclerViewMap"
+        android:orientation="horizontal"
+        >
+
+    </android.support.v7.widget.RecyclerView>
+
     <Button
         android:id="@+id/nslcButton"
         android:layout_width="65sp"
         android:layout_height="65sp"
-        android:layout_gravity="end|top"
-        android:text="@string/nslc_button"
-        android:textSize="12sp"
-        android:layout_marginTop="10sp"
-        android:layout_marginStart="10sp"
-        android:onClick="onClick"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:background="@drawable/round_button"
-         /> 
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/recyclerViewMap"
-            android:orientation="horizontal"
-            >
-
-        </android.support.v7.widget.RecyclerView>
-
-    </RelativeLayout>
+        android:onClick="onClick"
+        android:text="@string/nslc_button"
+        android:textSize="12sp" />
 
 
 </RelativeLayout>
