--- a/app/src/main/res/layout/layout_mapcards.xml
+++ b/app/src/main/res/layout/layout_mapcards.xml
@@ -1,38 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent">
+
+
     <android.support.v7.widget.CardView
+        android:id="@+id/am"
         android:layout_width="match_parent"
         android:layout_height="60sp"
+        android:layout_margin="10sp"
         app:cardBackgroundColor="@color/light_gery"
-        android:layout_margin="20sp"
         app:cardCornerRadius="5dp"
-        app:cardElevation="5dp"
-        android:layout_alignParentBottom="true">
+        app:cardElevation="5dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <ImageView
+                android:id="@+id/cardImage"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_centerVertical="true"
-                android:scaleType="centerCrop"
-                android:id="@+id/cardImage"
                 android:layout_marginStart="5dp"
-                android:src="@drawable/ic_launcher_background"/>
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_launcher_background" />
 
             <TextView
                 android:id="@+id/mapcard_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
-                android:text="store Address here"
-                android:gravity="center"/>
+                android:layout_centerVertical="true"
+                android:gravity="center"
+                android:text="store Address here" />
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
+
 </RelativeLayout>
+
