--- a/app/src/main/res/layout/activity_search_bar_activity.xml
+++ b/app/src/main/res/layout/activity_search_bar_activity.xml
@@ -23,7 +23,7 @@
 
     <ListView
         android:id="@+id/search_results"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
     </ListView>
 
